# FollowMe-public

./: README.md
app_interface_bridge/: CMakeLists.txt  README.md  package.xml
app_interface_bridge/scripts/: app_server.py
app_interface_bridge/src/: app_server.py-old
bt_follow_me/: CMakeLists.txt  README.md  package.xml
bt_follow_me/NCP_Host/app/bluetooth/common_host/aoa_angle/: aoa_angle.c
bt_follow_me/NCP_Host/app/bluetooth/common_host/aoa_parse/: aoa_parse_enum.c
bt_follow_me/NCP_Host/app/bluetooth/common_host/aoa_util/: aoa_serdes.c  aoa_types.h
bt_follow_me/NCP_Host/app/bluetooth/followme_bt_AoA_host/: app.c  makefile
bt_follow_me/NCP_Host/app/bluetooth/followme_bt_AoA_host/config/: followme_locator_config.json
bt_follow_me/NCP_Host/app/bluetooth/followme_bt_AoA_host/distance/: followme_distance.c  followme_distance.h
bt_follow_me/NCP_Host/app/bluetooth/followme_bt_AoA_host/position/: followme_positioning.c  followme_positioning.h
bt_follow_me/launch/: bt_follow_me.launch
bt_follow_me/src/: bt_follow_me_node.cpp
bt_follow_me/visualizer/: README.md  pyproject.toml  visualizer.py
cv_follow_me/: CMakeLists.txt  README.md  package.xml  requirements.txt
cv_follow_me/launch/: follow_me.launch
cv_follow_me/scripts/: config.py  event_and_state_handlers.py  feature_extractors.py  kalman_filter.py  reid_system.py  ros_multi_modal_tracker.py  state_control_topic_client.py  vision_utils.py
cv_follow_me/src/: cv_follow_me_node.cpp
follow_me_engine/: CMakeLists.txt  README.md  package.xml
follow_me_engine/launch/: follower.launch
follow_me_engine/scripts/: follow_me_engine_pynode.py
follow_me_engine/src/: follow_me_engine_node.cpp
user_interface/smartwatch_app/: README.md
user_interface/smartwatch_app/FollowMeApp/: settings.gradle.kts
user_interface/smartwatch_app/FollowMeApp/app/: build.gradle.kts
user_interface/smartwatch_app/FollowMeApp/app/src/main/: AndroidManifest.xml
user_interface/smartwatch_app/FollowMeApp/app/src/main/java/com/example/followmeapp/presentation/: MainActivity.kt
user_interface/smartwatch_app/FollowMeApp/app/src/main/java/com/example/followmeapp/presentation/theme/: Theme.kt
user_interface/smartwatch_app/FollowMeApp/app/src/main/res/drawable/: button1.xml
user_interface/smartwatch_app/FollowMeApp/app/src/main/res/mipmap-anydpi-v26/: follow_me_app_icon.xml
user_interface/smartwatch_app/FollowMeApp/app/src/main/res/values/: follow_me_app_icon_background.xml  ic_launcher_background.xml  strings.xml
user_interface/smartwatch_app/FollowMeApp/app/src/main/res/xml/: network_security_config.xml
user_interface/smartwatch_app/FollowMeApp/gradle/: libs.versions.toml
user_interface/smartwatch_app/FollowMeApp/gradle/wrapper/: gradle-wrapper.properties
