<?xml version="1.0"?>
<package format="2">
  <name>app_interface_bridge</name>
  <version>0.0.0</version>
  <description>ROS node that exposes an HTTP interface to call command services</description>
  <maintainer email="jraheema@ucsd.edu">Julian Raheema</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- Flask for HTTP server -->
  <exec_depend>python3-flask</exec_depend>
</package>
